# manly_randomization_test

./: Makefile  README.md  pyproject.toml  setup.py
manly_randomization_test/: __init__.py  manly_randomization_test.py
src/: randomization.py
tests/: test_RandomizationTest.py
